fixed aaron text overflow

--- a/src/styles/stories.css
+++ b/src/styles/stories.css
@@ -82,7 +82,7 @@ body {
   margin-top: 1rem;
   font-size: 0.8rem;
   line-height: 1.4;
-  height: 20vh;
+  height: 25vh;
   overflow: hidden;
 }
 
